overflow fix

--- a/src/components/details-part-bottom/details-part-bottom.styles.scss
+++ b/src/components/details-part-bottom/details-part-bottom.styles.scss
@@ -1,6 +1,6 @@
 .bottom-part {
     width: 100%;
-    margin-top: 10%;
+    margin-top: 1rem;
     display: flex;
     justify-content: space-around;
     text-align: center;
