--- a/src/components/time/time.styles.scss
+++ b/src/components/time/time.styles.scss
@@ -2,7 +2,7 @@
     text-align: center;
 
     .time {
-        font-size: 180px;
+        font-size: 160px;
         font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
     }
 
